--- a/ac/config/locale.cfg
+++ b/ac/config/locale.cfg
@@ -1,12 +1,6 @@
 // localization tools
 
-
-// enables localization for a string, so it can be picked up by xgettext
-alias gettext [
-	result $arg1
-]
-
-// shortcut, same as the known c++ macro
+// retrieves the localized version of a string based on the current locale
 alias _ [
 	result (gettext $arg1)
 ]
