--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -1,14 +1,12 @@
 // These default settings get executed whenever "saved.cfg" is not available.
 // Do not modify anything below, instead change settings in game, or add to autoexec.cfg
 
-name "unarmed"     		// Change your name!
-loadcrosshair default.png	// Choose another crosshair, see packages/misc/crosshairs/
-loadcrosshair teammate.png teammate // teammate crosshair
-loadcrosshair red_dot.png scope // scope crosshair
-skin 0				// Change your look.
-autoreload 1			// Reload the guns automatically by default.
-
-lighterror 4 //set higher (for example 8) if you experience slowdown
+name "unarmed"				// Change your name!
+loadcrosshair default.png		// Choose another crosshair, see packages/misc/crosshairs/
+loadcrosshair teammate.png teammate	// Teammate crosshair.
+loadcrosshair red_dot.png scope		// Scope crosshair.
+skin 0					// Change your look.
+autoreload 1				// Reload the guns automatically by default.
 
 // NOTE: by default the zoom script just divides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
