locale independent scopesensscale
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4641 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -12,7 +12,8 @@ autoreload 1				// Reload the guns automatically by default.
 // if you want to set your own value for it, go to the following line and 
 // replace $scopesensscale by your desired sensitivity value:
 
-alias scopesensscale 0.5
+//alias scopesensscale 0.5 // the seperator may be "." or "," depending on locale!
+alias scopesensscale (divf 1 2)
 alias scopesens [ *f $sensitivity $scopesensscale ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
