post-build event fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4694 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -125,7 +125,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy /Y $(ProjectDir)\$(OutDir)\*.pdb $(TargetDir)\.. "
+				CommandLine="copy /Y &quot;$(ProjectDir)$(OutDir)\*.pdb&quot; &quot;$(TargetDir)..&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -442,7 +442,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy /Y $(ProjectDir)\$(OutDir)\*.pdb $(TargetDir)\.. "
+				CommandLine="copy /Y &quot;$(ProjectDir)$(OutDir)\*.pdb&quot; &quot;$(TargetDir)..&quot; "
 			/>
 		</Configuration>
 		<Configuration
