use cube.rc in builds
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4697 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -1370,6 +1370,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\cube.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\src\docs.cpp"
 				>
 				<FileConfiguration
